api-reference/v3/accounting/invoice-credit-notes/create-invoice-credit-notes.mdx
---
version: "v3"
openapi: openapi_v3 post /accounting/invoice_credit_notes
---

An **Invoice Credit Note** is a financial transaction representing a reduction that can be applied against one or multiple invoices issued to Customers.

## Additional Required Fields

To successfully create an invoice credit note, certain fields must be included in the raw_data object of the request body. The required fields are as follows:

| Integration           | Field         | Description                                                                                             | Required |
| --------------------- | ------------- | ------------------------------------------------------------------------------------------------------- | -------- |
| SAGE_CLOUD_ACCOUNTING | currency_rate | The exchange rate to be used for the invoice credit note.                                               | Yes      |
| FRESH_BOOKS           | currency_rate | The exchange rate between the currency of the invoice credit note and the base currency of the company. | Yes      |
| SAGE_CLOUD_ACCOUNTING | currency_rate | The exchange rate to be used for the invoice credit note.                                               | Yes      |

<RequestExample>

```bash cURL
curl --request POST \
  --url https://api.rootfi.dev/v3/accounting/invoice_credit_notes \
  --header 'Content-Type: application/json' \
  --header 'api_key: <api-key>' \
  --data '{
  "company_id": 1,
  "data": [
    {
      "contact_id": "123456",
      "document_number": "ROOTFI01",
      "posted_date": "2021-09-28T15:00:00.000Z",
      "currency_id": "GBP",
      "invoice_ids": [],
      "memo": "Test Invoice",
      "line_items": [
        {
          "account_id": "123456",
          "quantity": 1,
          "item_id": "123456",
          "tax_id": "123456",
          "unit_amount": 100,
          "total_discount": 0,
          "description": "Test Item"
        }
      ]
    }
  ]
}'
}'
```

```javascript NodeJS
import { RootFiClient } from "rootfi-api";
const rootfi = new RootFiClient({ apiKey: "<api_key>" });

await rootfi.accounting.invoiceCreditNote.create({
  company_id: 1,
  data: [
    {
      contact_id: "123456",
      document_number: "ROOTFI01",
      posted_date: "2021-09-28T15:00:00.000Z",
      currency_id: "GBP",
      invoice_ids: [],
      memo: "Test Invoice",
      line_items: [
        {
          account_id: "123456",
          quantity: 1,
          item_id: "123456",
          tax_id: "123456",
          unit_amount: 100,
          total_discount: 0,
          description: "Test Item",
        },
      ],
    },
  ],
});
```

</RequestExample>
